namespace colab.Business.Models.Entities.Enums;

public enum Escolaridade
{
    Tecnico,
    Graduacao,
    Mestrado,
    Doutorado
}