namespace colabAPI.Business.Models.Entities
{
    public class Financiador
    {
        public int Id { get; set; }
        public string Nome { get; set; }
        public string Email { get; set; }
    }
}
