@startuml diagrama-classe

class Projeto {
  +nome: String
  +data_inicio: Date
  +data_fim: Date  
  +data_prevista_fim: Date
  +descricao: String
  +orcamento: Double
}

class Financiador {
  +nome: String
  +email: String
}

class Cargo {
  +nome: String
  +descricao: String
}

class HistoricoCargo{
  +data_inicio: Date
  +data_fim: Date  
  +descricao: String
}

class Pessoa {
  +nome: String
  +email: String
  +telefone: String
  +cpf: String
}

class HistoricoStatusProjeto {
  +data_inicio: Date
  +data_fim: Date  
}

enum StatusProjeto{
  INATIVO
  ATIVO
  CANCELADO
  FINALIZADO
}

class Bolsa {
  +valor: Double
  +data_inicio: Date
  +data_fim: Date  
  +data_prevista_fim: Date
  +ativo: Boolean
}

class TipoBolsa {
    +nome:
    +descricao:
}

enum Escolaridade {
    TECNICO
    ENSINO MEDIO
    ENSINO SUPERIOR
    POS GRADUACAO
}

Projeto "1" -- "N" Bolsa: possui alocado >
Projeto "N" -l-> "1" Financiador : patrocina <

Projeto "1" -- "N" HistoricoStatusProjeto : armazena <
HistoricoStatusProjeto "1" -l-> "1" StatusProjeto : categoriza >


Bolsa "1" -- "1" Pessoa : recebe <

Bolsa "1" -r-> "1" TipoBolsa : especifica <
TipoBolsa "1" --> "1" Escolaridade : é requisito <

Pessoa "1" -- "N" HistoricoCargo : < arquiva 

HistoricoCargo "1" -r- "1" Cargo : armazena >


@enduml


